html2rdf/tests/snapshots/test_cases__rdfa1.1__html5__0292.html_processor_graph.snap
---
source: html2rdf/tests/test-cases.rs
expression: "utils::serialize_normalized_graph(processor_graph, base.as_str(),)"
---
@base <http://rdfa.info/test-suite/test-cases/rdfa1.1/html5/0292.html> .
@prefix rdf: <//www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix xsd: <//www.w3.org/2001/XMLSchema#> .
@prefix rdfa: <//www.w3.org/ns/rdfa#> .
@prefix dc: <//purl.org/dc/terms/> .
_:c14n0 a rdfa:PrefixRedefinition ;
	dc:date "2020-01-13T12:02:00Z"^^xsd:dateTime ;
	dc:description "prefix 'rdf' redefined via @prefix" .
